src/css/gui.css
/******************************************************************
/* General properties and resets
/*****************************************************************/

/* Dimensions of all elements shall include padding and borders */
* {
    box-sizing: border-box;
}

#html, #body {
    width: 100%;
    height: 100%;
    margin: 0;
    width: 0;
}


/******************************************************************
/* Root layout and blocks
/*****************************************************************/

#root_layout {
    width: 100%;
    height: 100%;
    margin: 0;
    width: 0;
}

/* Debug border for main blocks */
#root_layout, #root_layout > * {
    border: 1px solid black;
}

#sidebar {
    position: absolute;
    right: 0;
    top: 80px;
    width: 400px;
    height: calc(100% - 40px - 80px);
    background-color: red;
    z-index: 100;
}

#status_bar {
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 40px;
    background-color: green;
    z-index: 100;
}

#main_menu {
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: 80px;
    background-color: blue;
    z-index: 100;
}

#drawing_display {
    position: absolute;
    top: 80px;
    left: 0;
    width: calc(100% - 400px);
    height: calc(100% - 40px - 80px);
    background: lightgray;
    z-index: 40;
}


/******************************************************************
/* Main canvases (drawing zone)
/*****************************************************************/

canvas {
    position: absolute;
    top: 50%;
    left: 50%;
    width: 800px;
    height: 600px;
    margin-left: -400px;
    margin-top: -300px;
}

#drawing_canvas {
    border: 1px solid red;
    z-index: 50;
}

#working_canvas {
    border: 1px dashed green;
    z-index: 60;
}

#selection_canvas {
    z-index: 70;
}


/******************************************************************
/* Main menu
/*****************************************************************/

#tool_selection_menu {
    padding: 0 0 0 20px;
    margin: 0;
    line-height: 80px;
    vertical-align: middle;
}

#tool_selection_menu > li {
    display: inline-block;
    margin: 0 20px 0 0;
    padding: 0;
    list-style: none;
}

#tool_selection_menu > li:last-child {
    margin: 0;
}

#tool_selection_menu .tool_button {
    margin: 0;
    padding: 5px;
}

